--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,7 +8,7 @@
   color: white !important;
 }
 .my-main-button:hover {
-  background-color: #2d55a0 !important;
+  background-color: #294c8f !important;
 }
 
 .dark-hover:hover {
